--- a/client/package.json
+++ b/client/package.json
@@ -3,33 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.10",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.49",
+    "axios": "^0.19.2",
+    "moment": "^2.24.0",
+    "react-moment": "^0.9.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "universal-cookie": "^4.0.3",
+    "uuid": "^7.0.3",
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.35",
     "@o2xp/react-datatable": "^1.1.28",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
     "material-icons": "^0.3.1",
     "material-table": "^1.54.2",
-    "moment": "^2.24.0",
     "mui-datatables": "^2.13.3",
-    "react": "^16.13.1",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.12.0",
     "react-full-screen": "^0.2.4",
-    "react-moment": "^0.9.7",
-    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-script": "^2.0.5",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "tubular-react": "^3.0.10",
-    "universal-cookie": "^4.0.3",
-    "uuid": "^7.0.3"
+    "react-scripts": "3.3.0",
+    "tubular-react": "^3.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
