--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "devconnector",
   "version": "1.0.0",
-  "description": "Social Network for Developpers",
+  "description": "Gestion de matriel informatique",
   "main": "server.js",
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "predeploy":"npm run build"
   },
   "author": "Fateh",
   "license": "ISC",
