--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.2",
-    "moment": "^2.24.0",
-    "react-moment": "^0.9.7",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "universal-cookie": "^4.0.3",
-    "uuid": "^7.0.3",
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.35",
@@ -29,7 +20,16 @@
     "react-router-dom": "^5.1.2",
     "react-script": "^2.0.5",
     "react-scripts": "3.3.0",
-    "tubular-react": "^3.0.10"
+    "tubular-react": "^3.0.10",
+    "axios": "^0.19.2",
+    "moment": "^2.24.0",
+    "react-moment": "^0.9.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "universal-cookie": "^4.0.3",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
